--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
-version: '2'
+version: '3'
 services:
   neo4j:
-    image: 'bitnami/neo4j:4'
+    image: neo4j:latest
+    container_name: neo4j
     ports:
-      - '7474:7474'
-      - '7473:7473'
-      - '7687:7687'
+      - 8000:8000
+      - 8001:8001
     volumes:
-      - 'neo4j_data:/bitnami'
+      - neo4j_data:/data
+      - ./neo4j-community-x.x.x/conf:/conf
+      - ./neo4j-community-x.x.x/plugins:/plugins
+      - ./neo4j-community-x.x.x/import:/import
     networks:
-      - neo4j-network
-
+      - public
 volumes:
   neo4j_data:
-    driver: local
 
 networks:
-  neo4j-network:
-    driver: bridge
+  public:
