--- a/neo4j-community-x.x.x/conf/neo4j.conf
+++ b/neo4j-community-x.x.x/conf/neo4j.conf
@@ -220,7 +220,6 @@ dbms.connector.https.listen_address=:8002
 #dbms.security.http_strict_transport_security=
 
 # Retention policy for transaction logs needed to perform recovery and backups.
-dbms.tx_log.rotation.retention_policy=1 days
 
 # Only allow read operations from this Neo4j instance. This mode still requires
 # write access to the directory for lock purposes.
@@ -330,5 +329,12 @@ dbms.windows_service_name=neo4j
 #********************************************************************
 # Other Neo4j system properties
 #********************************************************************
-apoc.export.file.enabled=true
-apoc.import.file.enabled=true
+dbms.connector.https.advertised_address=0.0.0.0:8002
+
+dbms.connector.http.advertised_address=0.0.0.0:8001
+
+dbms.memory.pagecache.size=512M
+
+# dbms.connector.bolt.advertised_address=0.0.0.0:7687
+dbms.tx_log.rotation.retention_policy=100M size
+dbms.directories.logs=/logs
