--- a/neo4j-community-x.x.x/conf/neo4j.conf
+++ b/neo4j-community-x.x.x/conf/neo4j.conf
@@ -329,6 +329,9 @@ dbms.windows_service_name=neo4j
 #********************************************************************
 # Other Neo4j system properties
 #********************************************************************
+apoc.export.file.enabled=true
+apoc.import.file.enabled=true
+
 dbms.connector.https.advertised_address=0.0.0.0:8002
 
 dbms.connector.http.advertised_address=0.0.0.0:8001
